# OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md
build-output/: opengl-fun
include/: barnes_hut.h  buffer_manager.h  camera.h  compute_shader.h  octree.h  octree_node.h  particle.h  particle_system.h  shader.h  shader_loader.h  thread_pool.h  timers.h
shaders/: barnesHutParticlesFrag.glsl  barnesHutParticlesVert.glsl  buildTree.glsl  calculateForces.glsl  compute.glsl  defaultFragmentShader.glsl  fragment.glsl  naiveParticlesFrag.glsl  octreeFrag.glsl  octreeVert.glsl  vertex.glsl
src/: barnes_hut.cpp  camera.cpp  compute_shader.cpp  main.cpp  octree.cpp  particle_system.cpp  shader.cpp  shader_loader.cpp
